--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <main>
 
-        <div class="dot dark"></div>
+        <div class="dot dark" onclick="theme()"></div>
 
     </main>
 
-    
+
     <script src="app.js"></script>
     
 </body>
