--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
     <main>
 
-        <div class="dot dark" onclick="theme()"></div>
+        <div class="dot dark" onclick="theme()">
+        
+            <span>click me!</span>
+        
+        </div>
 
     </main>
 
