--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>theme-switcher!</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://cdn.discordapp.com/emojis/844239596145475594.png?v=1" type="image/x-icon">
 </head>
 <body>
 
